--- a/src/main/resources/templates/layouts/Eventtouroku.html
+++ b/src/main/resources/templates/layouts/Eventtouroku.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="eventtouroku.css">
 <title>Insert title here</title>
 </head>
 <body>
@@ -47,9 +48,10 @@
         <div>
             <input type="submit" name="send" value="追加する">
         </div>
+        <!-- 一覧に戻る -->
         <div>
-            <!-- 一覧に戻る -->
-            <a href="/calendar">戻る</a>
+			<a class="btn-style-link" href="/calendar">戻る</a>
+           
         </div>
     </form>
 </body>
