--- a/src/main/resources/templates/layouts/torokuPage.html
+++ b/src/main/resources/templates/layouts/torokuPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <link th:href="@{/css/event.css}" type="text/css" rel="stylesheet">
