--- a/src/main/resources/templates/layouts/torokuPage.html
+++ b/src/main/resources/templates/layouts/torokuPage.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<link th:href="@{/css/event.css}" type="text/css" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet"  href="/css/event.css" />
 <title>Insert title here</title>
 </head>
 <body>
@@ -55,4 +56,4 @@
         </div>
     </form>
 </body>
-</html>
+</tml>
