eventserviceファイルの修正中

--- a/src/main/resources/static/css/event.css
+++ b/src/main/resources/static/css/event.css
@@ -2,6 +2,7 @@ h1 {
 	color: deeppink;
 }
 
-body{
-	background-color: aqua;
-}
+form {
+            max-width: 300px;
+            margin: auto;
+        }
