--- a/src/main/resources/templates/layouts/torokuPage.html
+++ b/src/main/resources/templates/layouts/torokuPage.html
@@ -2,8 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet"  href="/css/event.css" />
+<link rel="stylesheet"  href="/css/event.css" >
 <title>Insert title here</title>
 </head>
 <body>
