file tuika syuusei

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
 	<meta charset="UTF-8">
@@ -23,7 +23,7 @@
 	</div>
 
 	<div id="calendar"></div>
-	<script src="script.js"></script>
+	<script src="/script.js"></script>
 </body>
 
 </html>
