１１22日終了します

--- a/src/main/resources/static/css/event.css
+++ b/src/main/resources/static/css/event.css
@@ -1,8 +1,9 @@
 h1 {
 	color: deeppink;
+	margin: auto;
 }
 
-form {
-            max-width: 300px;
-            margin: auto;
-        }
+div {
+        max-width: 300px;
+        margin: auto;
+}
