ひとまず天気アイコン実装(要修正)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
 	<div id="header">
 		<select id="yearSelect"></select>
 		<select id="monthSelect"></select>
+		<span id="currentYear"></span>
 		<span id="currentMonth"></span> <!-- 現在月の取得 -->
 		<button id="searchBtn">検索</button>
 		<input id="searchBar" type="text" placeholder="検索...">
