--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 		<button id="searchBtn">検索</button>
 		<input id="searchBar" type="text" placeholder="検索...">
 		<span id="username">ユーザーネーム</span>
-		<a href="calendar/torokuPage">
+		<a href="/calendar/torokuPage">
 			<button id="addEventBtn">イベント新規登録</button>
 		</a>
 		<button id="logoutBtn">ログアウト</button>
