月表示カレンダー、日表示カレンダー連携

--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -25,14 +25,14 @@
 			width: 100vw;
 		}
 
-		#header button {
-			width: 80px;
-			/* 幅を80pxに設定 */
-			height: 30px;
-			/* 高さを30pxに設定 */
-			font-size: 12px;
-			/* フォントサイズを12pxに設定 */
-		}
+		/*		#header button {*/
+		/*			width: 80px;*/
+		/*			 幅を80pxに設定 */
+		/*			height: 30px;*/
+		/*			 高さを30pxに設定 */
+		/*			font-size: 12px;*/
+		/*			 フォントサイズを12pxに設定 */
+		/*		}*/
 
 		#searchBar {
 			width: 100px;
@@ -116,10 +116,11 @@
 		}
 
 		/* 検索バーの初期非表示スタイル */
-				#searchBar {
-					   z-index: 5;  /* 他の要素の前面に表示 */
-/*					display: none;*/
-				}
+		#searchBar {
+			z-index: 5;
+			/* 他の要素の前面に表示 */
+			display: block;
+		}
 
 		/* 前月と翌月の日付のスタイル */
 		#calendar .prev-month,
@@ -168,4 +169,21 @@
 			font-size: 0.8em;
 			color: blue;
 			cursor: pointer;
+		}
+
+		#popup {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			background-color: #fff;
+			padding: 20px;
+			border: 1px solid #ccc;
+			z-index: 10;
+			width: 50%;
+			/* ポップアップの幅を50%に設定 */
+			height: 50%;
+			/* ポップアップの高さを50%に設定 */
+			overflow: auto;
+			/* 内容が多い場合にスクロールを可能にする */
 		}
