--- a/src/main/resources/templates/torokuPage.html
+++ b/src/main/resources/templates/torokuPage.html
@@ -38,13 +38,13 @@
 		<div>
 			 <div align="center">
     			<h2>開始</h2>
-    			<input type="datetime-local"  th:field="*{startdatetime}" name="startTime">
+    			<input type="datetime-local"  th:field="*{startevent}" name="startTime">
 			</div>
 		</div>
 		<div>
 			 <div align="center">
           		 <h2>終了</h2>
-           		 <input type="datetime-local"  th:field="*{enddatetime}"  name="endTime">
+           		 <input type="datetime-local"  th:field="*{endevent}"  name="endTime">
        		 </div>
 		</div>
         <div>
