--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -25,14 +25,15 @@
 			width: 100vw;
 		}
 
-		/*		#header button {*/
-		/*			width: 80px;*/
-		/*			 幅を80pxに設定 */
-		/*			height: 30px;*/
-		/*			 高さを30pxに設定 */
-		/*			font-size: 12px;*/
-		/*			 フォントサイズを12pxに設定 */
-		/*		}*/
+		#closeBtn {
+			position: absolute;
+			top: 10px;
+			right: 10px;
+			background: none;
+			border: none;
+			font-size: 20px;
+			cursor: pointer;
+		}
 
 		#searchBar {
 			width: 100px;
