--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 		<span id="currentMonth"></span> <!-- 現在月の取得 -->
 		<button id="searchBtn">検索</button>
 		<input id="searchBar" type="text" placeholder="検索...">
-		<span id="username">〇</span> <!--要修正：優先度低め-->
+		<span id="username">UserName</span> <!--要修正：優先度低め-->
 		<a href="/calendar/torokuPage">
 			<button id="addEventBtn">イベント新規登録</button>
 		</a>
@@ -24,6 +24,10 @@
 		<button id="prevMonth">前の月</button>
 		<button id="nextMonth">次の月</button>
 	</div>
+<!--	<div id="popup">-->
+<!--		<button id="closeBtn">×</button>-->
+<!--		 ポップアップの内容 -->
+<!--	</div>-->
 
 	<div id="calendar"></div>
 	<script src="/script.js"></script>
