--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -39,7 +39,7 @@
 			<input type="submit" value="新規登録">
 		</div>
 	</form>
-	<p><a th:href="@{/login}">ログインはこちら</a></p>
+	<p><a th:href="@{/loginForm}">ログインはこちら</a></p>
 </body>
 
 </html>
