--- a/src/main/resources/templates/torokuPage.html
+++ b/src/main/resources/templates/torokuPage.html
@@ -1,60 +1,65 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet"  href="/css/event.css" >
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="/css/event.css">
+	<title>Insert title here</title>
 </head>
+
 <body>
-    <h1 align="center" >新規イベント</h1>
-    <!-- 登録処理のHTTPメソッドはPOSTにします -->
-    <form th:action="@{/calendar/toroku}" th:object="${eventForm}" method="post">
-        <div>
-            <label align="center">タイトル</label>
-        </div>
-        <div>
-          
-            <input type="text"  th:field="*{name}" placeholder="イベント名を入力してください" >
-        </div>
-        <div>
-       			<input type="radio" th:field="*{categoryId}" name="categoryId" value="0" align="center" th:checked="${eventForm.categoryId == 0}">室内
-        		<input type="radio" th:field="*{categoryId}"  name="categoryId" value="1" align="center" th:checked="${eventForm.categoryId == 1}">屋外
-   			
-		</div>
-<!--		<select th:field="*{categoryId}">-->
-<!--                 カテゴリ一覧から選択できるようする -->
-<!--                <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>-->
-<!--            </select>-->
-<!--        <div>-->
-<!--    		<label for="eventType" align="center">イベントラベル</label>-->
-<!--    		<select name="ラベル" align="center" id="eventType">-->
-<!--        		<option value="work">仕事</option>-->
-<!--        		<option value="travel">旅行</option>-->
-<!--        		<option value="recreation">遊び</option>-->
-<!--        		<option value="Private">プライベート</option>-->
-<!--   			 </select>-->
-<!--		</div>-->
-		
+	<h1 align="center">新規イベント</h1>
+	<!-- 登録処理のHTTPメソッドはPOSTにします -->
+	<form id="eventForm" th:action="@{/calendar/toroku}" th:object="${eventForm}" method="post">
 		<div>
-			 <div align="center">
-    			<h2>開始</h2>
-    			<input type="datetime-local"  th:field="*{startdatetime}" name="startTime">
+			<label align="center">タイトル</label>
+		</div>
+		<div>
+
+			<input type="text" th:field="*{name}" placeholder="イベント名を入力してください">
+		</div>
+		<div>
+			<input type="radio" th:field="*{categoryId}" name="categoryId" value="1" align="center"
+				th:checked="${eventForm.categoryId == 1}">室内
+			<input type="radio" th:field="*{categoryId}" name="categoryId" value="2" align="center"
+				th:checked="${eventForm.categoryId == 2}">屋外
+
+		</div>
+		<!--		<select th:field="*{categoryId}">-->
+		<!--                 カテゴリ一覧から選択できるようする -->
+		<!--                <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>-->
+		<!--            </select>-->
+		<!--        <div>-->
+		<!--    		<label for="eventType" align="center">イベントラベル</label>-->
+		<!--    		<select name="ラベル" align="center" id="eventType">-->
+		<!--        		<option value="work">仕事</option>-->
+		<!--        		<option value="travel">旅行</option>-->
+		<!--        		<option value="recreation">遊び</option>-->
+		<!--        		<option value="Private">プライベート</option>-->
+		<!--   			 </select>-->
+		<!--		</div>-->
+
+		<div>
+			<div align="center">
+				<h2>開始</h2>
+				<input type="datetime-local" th:field="*{startdatetime}" name="startTime">
 			</div>
 		</div>
 		<div>
-			 <div align="center">
-          		 <h2>終了</h2>
-           		 <input type="datetime-local"  th:field="*{enddatetime}"  name="endTime">
-       		 </div>
+			<div align="center">
+				<h2>終了</h2>
+				<input type="datetime-local" th:field="*{enddatetime}" name="endTime">
+			</div>
 		</div>
-        <div>
-            <input type="submit"  align="center" name="send" value="追加する">
-        </div>
-        <!-- 一覧に戻る -->
-        <div>
-			<a class="btn-style-link" align="center"  href="/calendar">戻る</a>
-           
-        </div>
-    </form>
+		<div>
+			<input type="submit" align="center" name="send" value="追加する">
+		</div>
+		<!-- 一覧に戻る -->
+		<div>
+			<a class="btn-style-link" align="center" href="/calendar">戻る</a>
+
+		</div>
+	</form>
 </body>
+
 </html>
