ボタン変更と更新処理

--- a/src/main/resources/templates/hensyuPage.html
+++ b/src/main/resources/templates/hensyuPage.html
@@ -51,10 +51,10 @@
              <input type="submit"  align="center" name="send" value="完了">
         </div>
         
-<!--         	<form th:action="@{/calendar/henshu/sakujo/{id}(id=${event.id})}"  method="post">-->
+         	<form th:action="@{/calendar/henshu/sakujo/{id}(id=${id})}"  method="post">
 <!--						 class属性にtbl-btnを追加 -->
-<!--                        <input class="tbl-btn" type="submit" value="削除">-->
-<!--             </form>-->
+                        <input class="tbl-btn" type="submit" value="削除">
+             </form>
         <div>
             <!-- 一覧に戻る -->
             <a href="/calendar"  class="btn-style-link"  align="center">戻る</a>
