--- a/src/main/resources/templates/torokuPage.html
+++ b/src/main/resources/templates/torokuPage.html
@@ -52,7 +52,8 @@
         </div>
         <!-- 一覧に戻る -->
         <div>
-			<a class="btn-style-link" align="center"  href="/calendar">戻る</a>
+			<a class="back-button" align="center"  href="/calendar">戻る</a>
+<!--			<button class="back-button"  href="/calendar"  align="center">戻る</button>-->
            
         </div>
     </form>
