--- a/src/main/resources/static/css/event.css
+++ b/src/main/resources/static/css/event.css
@@ -78,6 +78,19 @@ input[type="submit"]:hover {
     display: block;
 }
 
+.back-button {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      padding: 8px 16px;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
 .btn-style-link:hover {
     text-decoration: underline;
 }
