--- a/src/main/resources/templates/wetherAlert.html
+++ b/src/main/resources/templates/wetherAlert.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
- <html>
-  <head>
-   <meta charset="utf-8">
-   <title>JavaScript</title>
-  </head>
-  <body>
-  <script>
-   alert('アラート');
-  </script>
-  </body>
- </html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>外出予定と天気通知</title>
+</head>
+<body>
+  <h1>外出予定と天気通知</h1>
+  <label for="date">外出予定日:</label>
+  <input type="date" id="date">
+  <button onclick="registerEvent()">予定を登録する</button>
+
+  <script src="/wetherAlert.js"> </script>
+</body>
+</html>
