--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -15,15 +15,26 @@
 		/* ヘッダーのスタイル */
 		#header {
 			display: flex;
-			justify-content: center;
+			justify-content: space-around;
 			/* 要素を中央に寄せる */
-			gap: 10px;
+			gap: 1px;
 			/* 要素間のスペースを設定 */
 			align-items: center;
 			padding: 10px;
 			background-color: #f3f3f3;
 			width: 100vw;
 		}
+
+		#header .group {
+			display: flex;
+			gap: 5px;
+		}
+
+		#header .group1 {
+			display: flex;
+			justify-content: space-between;
+		}
+
 
 		#closeBtn {
 			position: absolute;
@@ -187,4 +198,47 @@
 			/* ポップアップの高さを50%に設定 */
 			overflow: auto;
 			/* 内容が多い場合にスクロールを可能にする */
+		}
+
+		#weather-container {
+			display: flex;
+			justify-content: space-around;
+			align-items: stretch; /* 追加 */
+		}
+
+		#weather-icons {
+			display: flex;
+			flex-wrap: wrap;
+		}
+
+		.icon {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin: 5px;
+			/* ここを調整 */
+		}
+
+		.icon img {
+			width: 50px;
+			/* ここを調整 */
+			height: 50px;
+			/* ここを調整 */
+		}
+
+		#weather-explanation {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
+			height: 170px;
+			/* ここを調整 */
+		}
+
+		.explanation {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin: 5px;
+			height: 45px;
+			/* ここを調整 */
 		}
