--- a/src/main/resources/templates/hensyuPage.html
+++ b/src/main/resources/templates/hensyuPage.html
@@ -8,20 +8,27 @@
 <body>
 	
  <!-- 見出しが変わります -->
-    <h1 align="center">イベント編集</h1>
+    <h1>イベント編集</h1>
     <!-- 登録処理のHTTPメソッドはPOSTにします -->
     <form th:action="@{/calendar/henshu/{id}(id=${id})}" th:object="${eventForm}" method="post">
         <div>
-            <label align="center">イベント名</label>
+            <h2>イベント名</h2>
         </div>
         <div>
             <!-- 商品名はtextにします、th:field属性の値は*{フィールド名}です -->
             <input type="text" th:field="*{name}" placeholder="イベント名を入力してください">
         </div>
         
-        <div>
-            <input type="radio" th:field="*{categoryId}" name="categoryId" value="2" align="center" th:checked="${eventForm.categoryId == 2}">室内
-        	<input type="radio" th:field="*{categoryId}"  name="categoryId" value="1" align="center" th:checked="${eventForm.categoryId == 1}">屋外
+        <div align="center">
+			<label>
+            <input type="radio" th:field="*{categoryId}" name="categoryId" value="2" align="center" 
+            th:checked="${eventForm.categoryId == 2}">室内
+            </label>
+            
+            <label>
+        	<input type="radio" th:field="*{categoryId}"  name="categoryId" value="1" align="center"
+        	 th:checked="${eventForm.categoryId == 1}">屋外
+        	 </label>
         </div>
         
 <!--         <div>-->
@@ -46,22 +53,25 @@
        		 </div>
 		</div>
 		
-       
-        <div>
-             <input type="submit"  align="center" name="send" value="完了">
+      <div style="display: flex; justify-content: center;">
+        <div align="center">
+             <input type="submit"  name="send" value="完了">
         </div>
         
+        <div align="center">
          	<form th:action="@{/calendar/henshu/sakujo/{id}(id=${id})}"  method="post">
 <!--						 class属性にtbl-btnを追加 -->
                         <input class="tbl-btn" type="submit" value="削除">
              </form>
+         </div>
         
     </form>
-    <div>
+    <div align="center">
 			<form th:action="@{/calendar}" method="get">
     			<input type="submit" value="戻る">
 			</form>
 			
         </div>
+      </div>
 </body>
 </html>
