--- a/src/main/resources/templates/torokuPage.html
+++ b/src/main/resources/templates/torokuPage.html
@@ -53,15 +53,18 @@
     			<input type="datetime-local"  th:field="*{startevent}" name="startTime">
 			</div>
 		</div>
+		
 		<div>
 			 <div align="center">
           		 <h2>終了</h2>
            		 <input type="datetime-local"  th:field="*{endevent}"  name="endTime">
        		 </div>
 		</div>
+		<div style="display: flex; justify-content: center;">
         <div align="center">
             <input type="submit" name="send" value="追加する">
         </div>
+        
         </form>
         <!-- 一覧に戻る -->
         <div align="center">
@@ -69,6 +72,7 @@
     			<input type="submit" value="戻る">
 			</form>
 			
+        </div>
         </div>
     
 </body>
