--- a/src/main/resources/templates/todayEvent.html
+++ b/src/main/resources/templates/todayEvent.html
@@ -8,9 +8,13 @@
 </head>
 <body>
 
+<div id="header">
+	<span id="username">UserName</span>
+	<button id="logoutBtn">ログアウト</button>
+</div>
 <div class="title">一日の予定表示</div>
 <div class="date" id="currentDate"></div>
-<button class="back-button">戻る</button> <!-- 戻るボタン -->
+<button class="back-button fixed">戻る</button> <!-- 戻るボタン -->
 
 
 <div id="schedule">
