--- a/src/main/resources/static/css/todayEvent.css
+++ b/src/main/resources/static/css/todayEvent.css
@@ -4,6 +4,20 @@
       line-height: 1.6;
       margin: 20px;
     }
+    
+    /* ヘッダーのスタイル */
+		#header {
+			display: flex;
+			justify-content: center;
+			/* 要素を中央に寄せる */
+			gap: 10px;
+			/* 要素間のスペースを設定 */
+			align-items: center;
+			padding: 10px;
+			background-color: #f3f3f3;
+			width: 100vw;
+		}
+    
     #schedule {
       width: 800px;
       margin: 20px auto;
@@ -49,7 +63,7 @@
       margin-bottom: 20px;
     }
     .back-button {
-      position: absolute;
+      position: fixed; 
       top: 20px;
       right: 20px;
       background-color: #007bff;
@@ -60,3 +74,21 @@
       cursor: pointer;
       border-radius: 4px;
     }
+    
+    /* 宮宇地追加分 */
+	.fixed {
+      position: sticky; /* sticky に変更 */
+      top: 0;
+	}
+	
+	/* ログアウトボタンのスタイル */
+		#logoutBtn {
+			background-color: #800000;
+			/* 背景色を水色に設定 */
+			color: white;
+			/* 文字色を白に設定 */
+			z-index: 1;
+			/* z-indexを設定してテキストを前面に出す */
+			border-radius: 10px;
+			/* 角に丸みを持たせる */
+		}
