--- a/src/main/resources/templates/todayEvent.html
+++ b/src/main/resources/templates/todayEvent.html
@@ -7,14 +7,15 @@
   <link rel="stylesheet" href="/css/todayEvent.css">
 </head>
 <body>
-
 <div id="header">
-	<span id="username">UserName</span>
-	<button id="logoutBtn">ログアウト</button>
-</div>
+		<div id="group">
+			<span id="username">UserName</span> <!--要修正：優先度低め-->
+			<button id="logoutBtn">ログアウト</button>
+		</div>
+	</div>
 <div class="title">一日の予定表示</div>
 <div class="date" id="currentDate"></div>
-<button class="back-button fixed">戻る</button> <!-- 戻るボタン -->
+<button class="back-button">戻る</button> <!-- 戻るボタン -->
 
 
 <div id="schedule">
