戻るボタン修正

--- a/src/main/resources/templates/todayEvent.html
+++ b/src/main/resources/templates/todayEvent.html
@@ -9,7 +9,7 @@
 <body>
 <div id="header">
 		<div id="group">
-			<span id="username">UserName</span> <!--要修正：優先度低め-->
+<!--			<span id="username">UserName</span> 要修正：優先度低め-->
 			<button id="logoutBtn">ログアウト</button>
 		</div>
 	</div>
