ポップアップ修正(一区切り)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
 			<button id="addEventBtn">イベント新規登録</button>
 		</a>
 		<div id="group">
-			<span id="username">UserName</span> <!--要修正：優先度低め-->
+<!--			<span id="username">UserName</span> 要修正：優先度低め-->
 			<button id="logoutBtn">ログアウト</button>
 		</div>
 	</div>
