--- a/src/main/resources/templates/torokuPage.html
+++ b/src/main/resources/templates/torokuPage.html
@@ -65,14 +65,14 @@
 		</div>
 		<div style="display: flex; justify-content: center;">
         <div align="center">
-            <input type="submit" name="send" value="追加する">
+            <input type="submit" class="add-button" name="send" value="追加する">
         </div>
         
         </form>
         <!-- 一覧に戻る -->
         <div align="center">
 			<form th:action="@{/calendar}" method="get">
-    			<input type="submit" value="戻る">
+    			<input type="submit" value="戻る" class="back-button">
 			</form>
 			
         </div>
